--- a/BookExchange/app/src/main/res/values/strings.xml
+++ b/BookExchange/app/src/main/res/values/strings.xml
@@ -10,5 +10,14 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_bottom">BottomActivity</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 
 </resources>
